# siteaudit-mcp

./: .gitignore  Dockerfile  LICENSE  PRICING.md  README.md  SECURITY.md  fastmcp.json  glama.json  mcpize.yaml  pyproject.toml  requirements.txt  server.json  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml
.mcpize/: project.json
docs/: X402_DEPLOYMENT.md  index.html
src/siteaudit/: __init__.py  __main__.py  server.py  server_x402.py
src/siteaudit/analyzers/: pagespeed.py  performance.py  security.py  seo.py
src/siteaudit/tools/: audit.py  premium.py
src/siteaudit/utils/: fetcher.py
