[project]
name = "siteaudit-mcp"
version = "1.2.0"
description = "Instant SEO, performance, and security audits for any URL — an MCP server for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Victor Dalhambra", email = "victor@siteaudit.dev" },
]
keywords = ["mcp", "seo", "performance", "security", "web-audit", "ai-agent"]

dependencies = [
    "fastmcp>=3.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
siteaudit = "siteaudit.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siteaudit"]
